my-test/testsuite_scan/ir/SingleSource/UnitTests/Vector/LASX/lasx-xvfcvth.ll.err
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvfcvth.c:7:3: error: use of undeclared identifier '__m256i'
    7 |   __m256i __m256i_out, __m256i_result;
      |   ^~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvfcvth.c:8:3: error: use of undeclared identifier '__m256'
    8 |   __m256 __m256_out, __m256_result;
      |   ^~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvfcvth.c:9:3: error: use of undeclared identifier '__m256d'
    9 |   __m256d __m256d_out, __m256d_result;
      |   ^~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvfcvth.c:10:3: error: use of undeclared identifier 'v4u64'
   10 |   v4u64 v4u64_op0, v4u64_op1, v4u64_op2, v4u64_result;
      |   ^~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvfcvth.c:11:3: error: use of undeclared identifier 'v8i32'
   11 |   v8i32 v8i32_op0, v8i32_op1, v8i32_op2, v8i32_result;
      |   ^~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvfcvth.c:19:3: error: use of undeclared identifier 'v4u64_op0'
   19 |   v4u64_op0 = (v4u64){0xf000000000000000, 0xf001000100010001,
      |   ^~~~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvfcvth.c:19:16: error: use of undeclared identifier 'v4u64'
   19 |   v4u64_op0 = (v4u64){0xf000000000000000, 0xf001000100010001,
      |                ^~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvfcvth.c:21:3: error: use of undeclared identifier 'v8i32_result'
   21 |   v8i32_result = (v8i32){0x00000000, 0x00000000, 0x00000000, 0xc6000000,
      |   ^~~~~~~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvfcvth.c:21:19: error: use of undeclared identifier 'v8i32'
   21 |   v8i32_result = (v8i32){0x00000000, 0x00000000, 0x00000000, 0xc6000000,
      |                   ^~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvfcvth.c:23:3: error: use of undeclared identifier '__m256_out'
   23 |   __m256_out = __lasx_xvfcvtl_s_h((__m256)v4u64_op0);
      |   ^~~~~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvfcvth.c:23:16: error: call to undeclared function '__lasx_xvfcvtl_s_h'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
   23 |   __m256_out = __lasx_xvfcvtl_s_h((__m256)v4u64_op0);
      |                ^
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvfcvth.c:23:36: error: use of undeclared identifier '__m256'
   23 |   __m256_out = __lasx_xvfcvtl_s_h((__m256)v4u64_op0);
      |                                    ^~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvfcvth.c:24:19: error: use of undeclared identifier 'v8i32_result'
   24 |   check_lasx_out(&v8i32_result, &__m256_out, sizeof(__m256_out), __FILE__, __LINE__);
      |                   ^~~~~~~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvfcvth.c:24:34: error: use of undeclared identifier '__m256_out'
   24 |   check_lasx_out(&v8i32_result, &__m256_out, sizeof(__m256_out), __FILE__, __LINE__);
      |                                  ^~~~~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvfcvth.c:24:53: error: use of undeclared identifier '__m256_out'
   24 |   check_lasx_out(&v8i32_result, &__m256_out, sizeof(__m256_out), __FILE__, __LINE__);
      |                                                     ^~~~~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvfcvth.c:26:3: error: use of undeclared identifier 'v4u64_op0'
   26 |   v4u64_op0 = (v4u64){0x00010000002fff9e, 0x0000fffeffb9ff9d,
      |   ^~~~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvfcvth.c:26:16: error: use of undeclared identifier 'v4u64'
   26 |   v4u64_op0 = (v4u64){0x00010000002fff9e, 0x0000fffeffb9ff9d,
      |                ^~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvfcvth.c:28:3: error: use of undeclared identifier 'v8i32_result'
   28 |   v8i32_result = (v8i32){0xfff3c000, 0x363c0000, 0x00000000, 0x33800000,
      |   ^~~~~~~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvfcvth.c:28:19: error: use of undeclared identifier 'v8i32'
   28 |   v8i32_result = (v8i32){0xfff3c000, 0x363c0000, 0x00000000, 0x33800000,
      |                   ^~~~~
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
